--- a/printzet-backend/package.json
+++ b/printzet-backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "swagger": "node swagger.js",
-    "dev": "npm run swagger && nodemon server.js",
+    "dev": "npm run swagger && node server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -14,7 +14,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.11.0",
-    "bcryptjs": "^3.0.3",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -41,7 +42,7 @@
     "twilio": "^5.8.0",
     "url": "^0.11.4",
     "uuid": "^11.1.0",
-    "xlsx": "^0.18.13"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0"
